--- a/simple-chat-jsf/chat-web/src/main/webapp/templates/masterLayout.xhtml
+++ b/simple-chat-jsf/chat-web/src/main/webapp/templates/masterLayout.xhtml
@@ -1,124 +1,120 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:p="http://primefaces.org/ui">
+<html xmlns:ui="http://java.sun.com/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:p="http://primefaces.org/ui">
 
-<f:view locale="#{pageView.getLocalVar()}">
-	
-	<h:head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<meta name="viewport"
-			content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <f:view locale="#{pageView.localeVar}">
 
-		<h:outputStylesheet library="css" name="bootstrap.css" />
-		<h:outputStylesheet library="css" name="dashboard.css" />
-		<h:outputStylesheet library="css" name="style.css" />
+        <h:head>
+            <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+            <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+            <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
 
-		<h:outputScript library="js" name="bootstrap.js">
-		</h:outputScript>
-		<title><ui:insert name="pageTitle"></ui:insert></title>
-		<ui:insert name="head-extra" />
+            <h:outputStylesheet library="css" name="bootstrap.css"/>
+            <h:outputStylesheet library="css" name="dashboard.css"/>
+            <h:outputStylesheet library="css" name="style.css"/>
 
-	</h:head>
+            <h:outputScript library="js" name="bootstrap.js" />
+            <title><ui:insert name="pageTitle" /></title>
+            <ui:insert name="head-extra"/>
 
-	<h:body>
-	<p:outputPanel id = "bodyPanel">
-	
-		<p:growl id="growl" showDetail="true" autoUpdate="true" sticky="true" />
-		<h:form id="loginPopup" styleClass="navbar-form navbar-right">
-			<nav class="navbar navbar-inverse navbar-fixed-top">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed"
-						data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-						aria-controls="navbar">
-						<span class="sr-only">Toggle navigation</span> <span
-							class="icon-bar"></span> <span class="icon-bar"></span> <span
-							class="icon-bar"></span>
-					</button>
-					<p:link styleClass="navbar-brand" href="/index.xhtml">
-					Simple Chat</p:link>
-					<p:outputLabel styleClass="navbar-brand" value="welcome #{request.userPrincipal.name} !" />
-					<p:graphicImage styleClass="navbar-brand" value="#{usersView.currentUser.imageUrl}"/>
+        </h:head>
 
-				</div>
-				<div id="navbar" class="navbar-collapse collapse">
-					<ul class="nav navbar-nav navbar-right">
-						<li><c:choose>
-								<c:when test="#{ request.userPrincipal.name == null }">
-									<p:link href="/public/login.xhtml">#{out.signin}</p:link>
-								</c:when>
-								<c:otherwise>
-									<p:link href="/logout" value="#{out.logout}" icon="ui-icon-extlink" />
-								</c:otherwise>
-							</c:choose></li>
-							<li>
-								 <h:form>
-                        			<h:selectOneMenu value="#{pageView.locale}" styleClass="btn btn-default">
-                            		<f:selectItems value="#{pageView.countriesList}" />
-                            		<p:ajax  event="change"   listener="#{pageView.setLocale()}" update="bodyPanel"/>
-                        </h:selectOneMenu>
-                    </h:form>
-							</li>
-						<li
-							class="visible-xs-block  #{request.requestURI.toString().contains('/public/registration.xhtml') ? 'active ' : ''}">
-							<p:link href="/public/registration.xhtml">#{out.signup}</p:link>
-						</li>
-						<li
-							class="visible-xs-block  #{request.requestURI.toString().contains('/secured/messages.xhtml') ? 'active ' : ''}">
-							<p:link href="/secured/messages.xhtml">#{out.msg} </p:link>
-						</li>
-						<li
-							class=" visible-xs-block #{request.requestURI.toString().contains('/public/users.xhtml') ? 'active ' : ''}">
-							<p:link href="/public/users.xhtml">#{out.users} </p:link>
-						</li>
+        <h:body>
+            <p:outputPanel id="bodyPanel">
+                <p:growl id="growl" showDetail="true" autoUpdate="true" sticky="true"/>
 
+                <h:form id="loginPopup" styleClass="navbar-form navbar-right">
+                    <nav class="navbar navbar-inverse navbar-fixed-top">
+                        <div class="container-fluid">
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed"
+                                        data-toggle="collapse" data-target="#navbar"
+                                        aria-expanded="false" aria-controls="navbar">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar" />
+                                    <span class="icon-bar" />
+                                    <span class="icon-bar" />
+                                </button>
 
-					</ul>
+                                <p:link styleClass="navbar-brand" href="/index.xhtml" value="Simple Chat" />
 
-				</div>
-			</div>
-			</nav>
-		</h:form>
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-3 col-md-2 sidebar">
-					<ul class="nav nav-sidebar">
-						<li
-							class="#{request.requestURI.toString().contains('/public/registration.xhtml') ? 'active ' : ''}">
-							<p:link href="/public/registration.xhtml">#{out.signup} </p:link>
-						</li>
-						<li
-							class="#{request.requestURI.toString().contains('/secured/messages.xhtml') ? 'active ' : ''}">
-							<p:link href="/secured/messages.xhtml">#{out.msg} </p:link>
-						</li>
-						<li
-							class="#{request.requestURI.toString().contains('/public/users.xhtml') ? 'active ' : ''}">
-							<p:link href="/public/users.xhtml">#{out.users} </p:link>
-						</li>
-					</ul>
+                                <p:outputLabel styleClass="navbar-brand" value="#{out.welcome} #{request.userPrincipal.name}!"/>
 
-				</div>
-				<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                                <p:graphicImage value="/image/#{usersView.currentUser.id}"
+                                                rendered="#{not empty usersView.currentUser.id}"
+                                                styleClass="navbar-brand" />
+                            </div>
 
+                            <div id="navbar" class="navbar-collapse collapse">
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li>
+                                        <c:choose>
+                                            <c:when test="#{request.userPrincipal.name == null }">
+                                                <p:link href="/public/login.xhtml">#{out.signin}</p:link>
+                                            </c:when>
 
+                                            <c:otherwise>
+                                                <p:link href="/logout" value="#{out.logout}" icon="ui-icon-extlink"/>
+                                            </c:otherwise>
+                                        </c:choose>
+                                    </li>
 
+                                    <li>
+                                        <h:form>
+                                            <h:selectOneMenu value="#{pageView.locale}" styleClass="btn btn-default">
+                                                <f:selectItems value="#{pageView.countriesList}"/>
+                                                <p:ajax event="change" listener="#{pageView.setLocale()}" update="bodyPanel"/>
+                                            </h:selectOneMenu>
+                                        </h:form>
+                                    </li>
 
-					<div class="">
-						<ui:insert name="content" />
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		</p:outputPanel>
-	</h:body>
+                                    <li class="visible-xs-block #{request.requestURI.toString().contains('/public/registration.xhtml') ? 'active ' : ''}">
+                                        <p:link href="/public/registration.xhtml">#{out.signup}</p:link>
+                                    </li>
 
-</f:view>
+                                    <li class="visible-xs-block #{request.requestURI.toString().contains('/secured/messages.xhtml') ? 'active ' : ''}">
+                                        <p:link href="/secured/messages.xhtml">#{out.messages}</p:link>
+                                    </li>
+
+                                    <li class="visible-xs-block #{request.requestURI.toString().contains('/public/users.xhtml') ? 'active ' : ''}">
+                                        <p:link href="/public/users.xhtml">#{out.users}</p:link>
+                                    </li>
+                                </ul>
+
+                            </div>
+                        </div>
+                    </nav>
+                </h:form>
+
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-sm-3 col-md-2 sidebar">
+                            <ul class="nav nav-sidebar">
+                                <li class="#{request.requestURI.toString().contains('/public/registration.xhtml') ? 'active ' : ''}">
+                                    <p:link href="/public/registration.xhtml">#{out.signup}</p:link>
+                                </li>
+                                <li class="#{request.requestURI.toString().contains('/secured/messages.xhtml') ? 'active ' : ''}">
+                                    <p:link href="/secured/messages.xhtml">#{out.messages}</p:link>
+                                </li>
+                                <li class="#{request.requestURI.toString().contains('/public/users.xhtml') ? 'active ' : ''}">
+                                    <p:link href="/public/users.xhtml">#{out.users}</p:link>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+                            <div class="">
+                                <ui:insert name="content"/>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </p:outputPanel>
+        </h:body>
+    </f:view>
 </html>
